--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -29,11 +29,11 @@ $bp-desktop: 768px;
 $color-primary: #da002e;
 $color-white: #fff;
 $color-grey-l: #eee;
-$color-grey-m: #ccc;
+$color-grey-m: #aaa;
 $color-grey-d: #666;
 $color-text-black: #404040;
-$color__background-ins: #fff9c0; // Legacy
-$color__text-screen: #21759b; // Legacy
+$color-background-ins: #fff9c0; // Legacy
+$color-text-screen: #21759b; // Legacy
 
 // Site ---------------------------------------------------
 
