--- a/assets/styles/media/_media.scss
+++ b/assets/styles/media/_media.scss
@@ -22,9 +22,9 @@ object {
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
-@import "captions";
+@import 'captions';
 
 /*--------------------------------------------------------------
 ## Galleries
 --------------------------------------------------------------*/
-@import "galleries";
+@import 'galleries';
