--- a/assets/styles/typography/_typography.scss
+++ b/assets/styles/typography/_typography.scss
@@ -21,6 +21,6 @@ p, .entry-content {
 	font-family: 'Lora', serif;
 }
 
-@import "headings";
-@import "copy";
-@import "icon-font";
+@import 'headings';
+@import 'copy';
+@import 'icon-font';
