get rid of rem font-size mixin. It's silly: https://mindtheshift.wordpress.com/2015/04/02/r-i-p-rem-viva-css-reference-pixel/

--- a/assets/styles/modules/_accessibility.scss
+++ b/assets/styles/modules/_accessibility.scss
@@ -13,7 +13,7 @@
 		clip: auto !important;
 		color: $color-text-screen;
 		display: block;
-		@include font-size(0.875);
+		font-size: 0.8em;
 		font-weight: bold;
 		height: auto;
 		left: 5px;
