--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -51,7 +51,7 @@
 	}
 	.icon {
 		color: $color-primary;
-		// color: #fff;
+		// color: $color-white;
 		// background: $color-primary;
 		// padding: 7px;
 		margin-right: 10px;
