--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -1,3 +1,4 @@
+// scss-lint:disable QualifyingElement
 button,
 input[type="button"],
 input[type="reset"],
@@ -7,17 +8,17 @@ input[type="submit"] {
 	border-radius: 0;
 	background: $color-primary;
 	// box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: #fff;
+	color: $color-white;
 	line-height: 1;
 	padding: .6em 1em;
 	// text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 
 	&:hover {
-		background: lighten( $color_primary, 10% );
+		background: lighten($color-primary, 10%);
 	}
 
 	&:active,
 	&:focus {
-		background: lighten( $color_primary, 10% );
+		background: lighten($color-primary, 10%);
 	}
 }
