--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,9 +15,9 @@ $ms-ratio: $augmented-fourth;
 
 // Susy Grid
 $susy: (
-	container: 1170em/16,
+	container: 1170px,
 	columns: 12,
-	gutters: 1/3,
+	gutters: 1 / 3,
 	gutter-position: inside
 	);
 
@@ -32,6 +32,7 @@ $color-grey-l: #eee;
 $color-grey-m: #aaa;
 $color-grey-d: #666;
 $color-text-black: #404040;
+$color-black-trans: rgba(0, 0, 0, 0.6);
 $color-background-ins: #fff9c0; // Legacy
 $color-text-screen: #21759b; // Legacy
 
