--- a/assets/styles/media/_media.scss
+++ b/assets/styles/media/_media.scss
@@ -7,7 +7,7 @@
 	padding: 0;
 }
 
-/* Make sure embeds and iframes fit their containers. */
+// Make sure embeds and iframes fit their containers.
 embed,
 iframe,
 object {
@@ -15,16 +15,9 @@ object {
 }
 
 // Featured image
-.wp-post-image { 
+.wp-post-image {
 	width: 100%;
 }
 
-/*--------------------------------------------------------------
-## Captions
---------------------------------------------------------------*/
 @import 'captions';
-
-/*--------------------------------------------------------------
-## Galleries
---------------------------------------------------------------*/
 @import 'galleries';
