--- a/assets/styles/navigation/_links.scss
+++ b/assets/styles/navigation/_links.scss
@@ -21,17 +21,17 @@ a {
 .more-link {
 	display: inline-block;
 	background: $color-primary;
-	color: #fff;
+	color: $color-white;
 	padding: 10px;
 	text-decoration: none;
 	font-weight: bold;
 	font-family: 'Roboto', sans-serif;
 	transition: background-color 0.3s;
 	&:hover, &:active {
-		color: #fff;
-		background: lighten( $color-primary, 10% );
+		color: $color-white;
+		background: lighten($color-primary, 10%);
 	}
 	&:visited {
-		color: #fff;
+		color: $color-white;
 	}
 }
