--- a/assets/styles/site/_front-page.scss
+++ b/assets/styles/site/_front-page.scss
@@ -3,7 +3,7 @@
 .splash {
 	width: 100%;
 	height: 100vh;
-	color: #fff;
+	color: $color-white;
 	display: table;
 	.inner {
 		display: table-cell;
@@ -34,26 +34,26 @@
 		position: absolute;
 		left: 50%;
 		bottom: 60px;
-		margin-left: -( $pad + $size / 2);
-		border: 2px solid #fff;
+		margin-left: -($pad + $size / 2);
+		border: 2px solid $color-white;
 		border-radius: 50%;
 		text-align: center;
+		animation: throb $timing infinite;
 		.icon {
-			color: #fff;
+			color: $color-white;
 			font-size: $size;
 			line-height: 1;
 			padding: $pad;
 			animation: throb-inner $timing infinite;
 		}
-		animation: throb $timing infinite;
 	}
 	@keyframes throb {
 		0% {
-			margin-left: -( $pad + $size / 2);
+			margin-left: -($pad + $size / 2);
 			bottom: 60px;
 		}
 		50% {
-			margin-left: -( $pad+6 + $size / 2); 
+			margin-left: -($pad + 6 + $size / 2);
 			bottom: 60px - 6;
 		}
 	}
@@ -62,7 +62,7 @@
 			padding: $pad;
 		}
 		50% {
-			padding: $pad+6;
+			padding: $pad + 6;
 		}
 	}
 }
@@ -75,12 +75,12 @@
 	width: 100%;
 	height: 100vh;
 	background: $color-primary;
-	video { 
+	video {
 		width: auto;
 		min-width: 100%;
 		min-height: 100vh;
-		background: url(../assets/images/splash.jpg) no-repeat;
-		background-size: cover; 
+		background: url('../assets/images/splash.jpg') no-repeat;
+		background-size: cover;
 	}
 }
 
@@ -88,7 +88,7 @@
 
 .intro {
 	background: $color-primary;
-	color: #fff;
+	color: $color-white;
 	.container {
 		.slogan, .statement {
 			@include span(12);
