--- a/assets/styles/site/_site.scss
+++ b/assets/styles/site/_site.scss
@@ -1,4 +1,4 @@
 @import 'primary/posts-and-pages';
 @import 'primary/asides';
 @import 'primary/comments';
-@import 'front-page'
+@import 'front-page';
