fix front page skip link

--- a/assets/styles/typography/_icon-font.scss
+++ b/assets/styles/typography/_icon-font.scss
@@ -11,7 +11,7 @@
 	font-style: normal;
 }
 
-.icon:before {
+.icon {
 	display: inline-block;
 	font: normal normal normal 14px/1 'kanec-icons';
 	font-size: inherit;
