--- a/assets/styles/site/secondary/_widgets.scss
+++ b/assets/styles/site/secondary/_widgets.scss
@@ -1,6 +1,7 @@
 .site-footer {
 	background: $color-primary;
 	color: $color-white;
+	margin-top: gutter()*2;
 	a {
 		color: inherit;
 		text-decoration: none;
