--- a/assets/styles/navigation/_links.scss
+++ b/assets/styles/navigation/_links.scss
@@ -22,7 +22,7 @@ a {
 	display: inline-block;
 	background: $color-primary;
 	color: $color-white;
-	padding: 10px;
+	padding: 10px 20px;
 	text-decoration: none;
 	font-weight: bold;
 	font-family: 'Roboto', sans-serif;
