--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -43,11 +43,13 @@
 // Article sidebar
 .entry-meta {
 	margin-top: 1em;
+	font-size: ms(-1);
+	font-weight: bold;
+	color: $color-grey-m;
+
 	a {
-		// text-transform: uppercase;
-		font-weight: bold;
 		text-decoration: none;
-		color: $color-grey-m;
+		color: inherit;
 	}
 	.icon {
 		color: $color-primary;
@@ -62,15 +64,25 @@
 .posted-on, .byline, .cat-links, .tags-links, .comments-link {
 	display: block;
 	margin: 10px 0;
-	font-size: ms(-1);
 }
 
 // Header for archives, search, 404
 .page-header {
+	background: #92102A;
+	padding-top: 60px;
 	border-bottom: 0.5em solid $color-primary;
 }
 .page-title, .taxonomy-description, .page-content {
 	@include span(12);
+}
+
+
+.blog-intro {
+	@include span(12);
+	color: $color-primary;
+	h1, h2 {
+		font-weight: 100;
+	}
 }
 
 // Search results
