--- a/assets/styles/typography/_headings.scss
+++ b/assets/styles/typography/_headings.scss
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
-h1 { font-size: ms(4); }
+h1 { font-size: ms(4); font-weight: 100;}
 
 h2 { font-size: ms(3); }
 
