--- a/assets/styles/layout/_layout.scss
+++ b/assets/styles/layout/_layout.scss
@@ -1,6 +1,6 @@
-// .site-main {
-// 	margin-top: 60px;
-// }
-// .home .site-main {
-// 	margin-top: 0;
-// }
+.site-main {
+	margin-top: 60px;
+}
+.home .site-main {
+	margin-top: 0;
+}
