refactor $color-white -> $white

--- a/assets/styles/elements/_elements.scss
+++ b/assets/styles/elements/_elements.scss
@@ -1,5 +1,5 @@
 body {
-	background: $color-white; // Fallback for when there is no custom background color defined.
+	background: $white; // Fallback for when there is no custom background color defined.
 }
 
 blockquote, q {
