--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -7,7 +7,7 @@ input[type="submit"] {
 	outline: 0; // TODO: Accessibility?
 	border-radius: 0;
 	background: $color-primary;
-	color: $color-white;
+	color: $white;
 	line-height: 1;
 	padding: .6em 1em;
 
