--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -27,7 +27,7 @@ $bp-desktop: 768px;
 // Variables ----------------------------------------------
 
 $color-primary: #da002e;
-$color-white: #fff;
+$white: #fff;
 $color-grey-l: #eee;
 $color-grey-m: #aaa;
 $color-grey-d: #666;
