--- a/assets/styles/typography/_headings.scss
+++ b/assets/styles/typography/_headings.scss
@@ -4,6 +4,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 700;
 	line-height: 1.2;
 	clear: both;
+	.icon {
+		color: $color-primary;
+	}
 }
 
 h1 { font-size: ms(4); font-weight: 100;}
