--- a/assets/styles/forms/_fields.scss
+++ b/assets/styles/forms/_fields.scss
@@ -26,3 +26,11 @@ textarea {
 	padding-left: 3px;
 	width: 100%;
 }
+
+label {
+	font-family: 'Roboto', sans-serif;
+	font-size: ms(-1);
+	font-weight: 700;
+	text-transform: uppercase;
+	display: block;
+}
