--- a/assets/styles/site/primary/_comments.scss
+++ b/assets/styles/site/primary/_comments.scss
@@ -64,7 +64,8 @@
 	display: inline-block;
 	font-size: ms(-1);
 	padding: .5em 1em;
-	// margin-bottom: gutter();
+	font-weight: 700;
+	text-transform: uppercase;
 	text-decoration: none;
 	border-radius: 5px;
 	color: $white;
