Use var for font families

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,6 +26,8 @@ $bp-desktop: 768px;
 
 // Variables ----------------------------------------------
 
+$font-sans: 'Roboto', sans-serif;
+$font-serif: 'Lora', serif;
 $color-primary: #da002e;
 $white: #fff;
 $color-grey-l: #eee;
