--- a/assets/styles/navigation/_links.scss
+++ b/assets/styles/navigation/_links.scss
@@ -25,7 +25,7 @@ a {
 	padding: 10px 20px;
 	text-decoration: none;
 	font-weight: bold;
-	font-family: 'Roboto', sans-serif;
+	font-family: $font-sans;
 	transition: background-color 0.3s;
 	&:hover, &:active {
 		color: $white;
