--- a/assets/styles/typography/_icon-font.scss
+++ b/assets/styles/typography/_icon-font.scss
@@ -31,6 +31,7 @@
 	&bars:before { content: '\EA0B'; }
 	&arrow-left:before { content: '\EA0C'; }
 	&arrow-right:before { content: '\EA0D'; }
+	&exclamation-triangle:before { content: '\EA0E'; }
 
 	// section.intro
 	&creative-cloud:before { content: '\EA09'; }
