--- a/assets/styles/forms/_fields.scss
+++ b/assets/styles/forms/_fields.scss
@@ -24,11 +24,11 @@ input[type="search"] {
 
 textarea {
 	padding-left: 3px;
-	width: 100%;
+	width: 97%;
 }
 
 label {
-	font-family: 'Roboto', sans-serif;
+	font-family: $font-sans;
 	font-size: ms(-1);
 	font-weight: 700;
 	text-transform: uppercase;
