Do responsive videos with CSS, not JetPack

--- a/assets/styles/media/_media.scss
+++ b/assets/styles/media/_media.scss
@@ -14,6 +14,27 @@ object {
 	max-width: 100%;
 }
 
+// Responsive YouTube embeds
+// @see https://css-tricks.com/NetMag/FluidWidthVideo/Article-FluidWidthVideo.php
+// @see http://alistapart.com/article/creating-intrinsic-ratios-for-video
+.embed-youtube {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+    margin-top: gutter();
+}
+ 
+.embed-youtube iframe,
+.embed-youtube object,
+.embed-youtube embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 // Featured image
 .wp-post-image {
 	width: 100%;
