--- a/assets/styles/navigation/_menus.scss
+++ b/assets/styles/navigation/_menus.scss
@@ -129,6 +129,10 @@
 		padding: 1em;
 		margin: 1em 0;
 		border-radius: 50%;
+		transition: background-color 0.3s;
+	}
+	a:hover .icon {
+		background: lighten($color-primary, 10%);
 	}
 
 	.nav-previous {
