Fix long URLs breaking excerpts

--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -25,6 +25,9 @@
 	color: inherit;
 	word-wrap: break-word;
 }
+.entry-content {
+	word-wrap: break-word; // Fix long URLs breaking excerpts
+}
 
 .sticky {
 	display: block;
