16:9 featured image crop

--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -88,6 +88,19 @@
 	}
 }
 
+// Featured Image
+.featured-image {
+	position: relative;
+	padding-bottom: 56.25%; // 16:9 intrinsic ratio
+	height: 0;
+	max-height: 100vh;
+	width: 100%;
+	overflow: hidden;
+}
+.wp-post-image { // <img>
+	width: 100%;
+}
+
 // Search results
 
 // .no-results {
