--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -96,11 +96,22 @@
 	max-height: 100vh;
 	width: 100%;
 	overflow: hidden;
+	margin-bottom: gutter();
 }
 	.wp-post-image { // <img>
 		width: 100%;
 	}
-
+	.expand {
+		position: absolute;
+		cursor: pointer;
+		bottom: 10px;
+		right: 10px;
+		padding: 10px;
+		background: #f00;
+		&:before {
+			content: 'Expand';
+		}
+	}
 
 // Search results
 
