--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -30,6 +30,7 @@ $font-sans: 'Roboto', sans-serif;
 $font-serif: 'Lora', serif;
 $color-primary: #da002e;
 $white: #fff;
+$black: #000;
 $color-grey-l: #eee;
 $color-grey-m: #aaa;
 $color-grey-d: #666;
