--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -106,10 +106,18 @@
 		cursor: pointer;
 		bottom: 10px;
 		right: 10px;
-		padding: 10px;
-		background: #f00;
+		padding: 15px;
+		color: $white;
+		background: $color-black-trans;
+		font-family: 'kanec-icons';
+		line-height: 1;
+		border-radius: 50%;
+		transition: background-color 0.5s;
 		&:before {
-			content: 'Expand';
+			content: '\EA0F';
+		}
+		&:hover {
+			background: $black;
 		}
 	}
 
