--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,59 +1,28 @@
 // Main Stylesheet
 
-// Vendor Libraries ---------------------------------------
-
+// Vendor Libraries
+// --------------------------------------------------------
 @import 'normalize';
 @import '../../bower_components/modular-scale/stylesheets/modular-scale';
 @import '../../bower_components/compass-breakpoint/stylesheets/breakpoint';
 @import '../../bower_components/susy/sass/susy';
 
-// Config -------------------------------------------------
+// Variables & Config
+// --------------------------------------------------------
+@import 'variables';
 
-// Modular scale
-$ms-base: 1em;
-$ms-ratio: $augmented-fourth;
-
-// Susy Grid
-$susy: (
-	container: 1170px,
-	columns: 12,
-	gutters: 1 / 2,
-	gutter-position: inside
-	);
-
-// Breakpoints
-$bp-desktop: 768px;
-
-// Variables ----------------------------------------------
-
-$font-sans: 'Roboto', sans-serif;
-$font-serif: 'Lora', serif;
-$color-primary: #da002e;
-$white: #fff;
-$black: #000;
-$color-grey-l: #eee;
-$color-grey-m: #aaa;
-$color-grey-d: #666;
-$color-text-black: #404040;
-$color-black-trans: rgba(0, 0, 0, 0.6);
-$color-background-ins: #fff9c0; // Legacy
-$color-text-screen: #21759b; // Legacy
-
-$color-error: $color-primary;
-
-// Site ---------------------------------------------------
-
-@import 'mixins/mixins-master';
-
-@import 'layout/layout';
-@import 'typography/typography';
-@import 'elements/elements';
-@import 'forms/forms';
-@import 'navigation/navigation';
-@import 'modules/accessibility';
-@import 'modules/alignments';
-@import 'modules/clearings';
-@import 'site/secondary/widgets';
-@import 'site/site';
-@import 'modules/infinite-scroll';
-@import 'media/media';
+// Actual Things
+// --------------------------------------------------------
+@import 'mixins';
+@import 'typography';
+@import 'general-elements';
+@import 'utilities';
+@import 'accessibility';
+@import 'icons';
+@import 'forms';
+@import 'wp-core';
+@import 'navigation';
+@import 'footer';
+@import 'posts-and-pages';
+@import 'comments';
+@import 'front-page';
