--- a/assets/styles/_general-elements.scss
+++ b/assets/styles/_general-elements.scss
@@ -31,14 +31,48 @@ hr {
 	background: $color-primary url('../assets/images/line-diagonal-mask.png') repeat;
 }
 
-@import 'lists';
-
 img {
 	height: auto; // Make sure images are scaled correctly.
 	max-width: 100%; // Adhere to container width.
 }
 
-@import 'tables';
+// Lists
+// --------------------------------------------------------
+
+ul, ol {
+	margin: 0 0 1.5em 3em;
+}
+
+ul {
+	list-style: disc;
+}
+
+ol {
+	list-style: decimal;
+}
+
+li > ul,
+li > ol {
+	margin-bottom: 0;
+	margin-left: 1.5em;
+}
+
+dt {
+	font-weight: bold;
+}
+
+dd {
+	margin: 0 1.5em 1.5em;
+}
+
+
+// Tables
+// --------------------------------------------------------
+
+table {
+	margin: 0 0 1.5em;
+	width: 100%;
+}
 
 figure {
 	margin: 0;
