--- a/assets/styles/_posts-and-pages.scss
+++ b/assets/styles/_posts-and-pages.scss
@@ -140,3 +140,8 @@
 // 		@include span(12);
 // 	}
 // }
+
+.blog .format-aside .entry-title,
+.archive .format-aside .entry-title {
+	display: none;
+}
