Split base layout to separate partial

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -18,8 +18,9 @@
 @import 'general-elements';
 @import 'utilities';
 @import 'accessibility';
-@import 'icons';
 @import 'forms';
+@import 'icons';
+@import 'layout';
 @import 'wp-core';
 @import 'navigation';
 @import 'footer';
