--- a/assets/styles/_footer.scss
+++ b/assets/styles/_footer.scss
@@ -25,6 +25,7 @@
 
 .footer-widgets {
 	@include container;
+	padding: 0 1em;
 	.widget-area {
 		@include span(12);
 		@include susy-breakpoint($bp-desktop) {
